# automationProject

./: README.md  pyproject.toml
TestCases/: conftest.py  test_youtube.py
pages/: base_file.py  comment_page.py  comment_page_locator.py  login_page.py  login_page_locator.py  video_page.py  video_page_locator.py  video_play.py  video_play_locator.py
resources/: config.py
