[tool.poetry]
name = "automationproject"
version = "0.1.0"
description = ""
authors = ["samsunnishamultani <saihsaif8685@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.20.0"
pytest= "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
